--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
 			</div>
 		</div>
 		
+		<div class='tableauPlaceholder' id='viz1602405225125' style='position: relative'><noscript><a href='https:&#47;&#47;www.msan.com'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;QQ4XJDF9N' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                
 		
 		<div class="flex flex-wrap flex-col-reverse sm:flex-row">	
 			<div class="w-full sm:w-1/2 p-6 mt-6">
@@ -596,6 +597,14 @@
 	}
 </script>
 
+<script type='text/javascript'>                    
+	var divElement = document.getElementById('viz1602405225125');                    
+	var vizElement = divElement.getElementsByTagName('object')[0];                    
+	vizElement.style.width='1016px';vizElement.style.height='991px';                    
+	var scriptElement = document.createElement('script');                    
+	scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+	vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+</script>
 
 </body>
 
