--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			</button>
 		</div>
 
-<!--		<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
+		<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
 			<ul class="list-reset lg:flex justify-end flex-1 items-center">
 				<li class="mr-3">
 					<a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">Active</a>
@@ -63,7 +63,7 @@
 				</li>
 			</ul>
 			<button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75">Action</button>
-		</div> -->
+		</div>
 	</div>
 	
 	<hr class="border-b border-gray-100 opacity-25 my-0 py-0" />
