--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 		<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
 			<ul class="list-reset lg:flex justify-end flex-1 items-center">
 				<li class="mr-3">
-					<a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">Active</a>
+					<!-- <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">Active</a> -->
 				</li>
 				<li class="mr-3">
-					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">link</a>
+					<!-- <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">link</a> -->
 				</li>
 				<li class="mr-3">
-					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">link</a>
+					<!-- <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">link</a>  -->
 				</li>
 			</ul>
 			<button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75">Action</button>
@@ -84,7 +84,7 @@
 		
 			
 
-			<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg">Subscribe</button>
+			<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg">Get Started</button>
 			
 		</div>
 		<!--Right Col-->
@@ -123,10 +123,10 @@
 	
 		<div class="flex flex-wrap">
 			<div class="w-5/6 sm:w-1/2 p-6">
-				<h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Lorem ipsum dolor sit amet</h3>
-				<p class="text-gray-600 mb-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.<br /><br />
+			<!-- <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">Lorem ipsum dolor sit amet</h3>
+				<p class="text-gray-600 mb-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.<br /><br /> --
 				
-				Images from: <a class="text-orange-500 underline" href="https://undraw.co/">undraw.co</a></p>
+			 <!--	Images from: <a class="text-orange-500 underline" href="https://undraw.co/">undraw.co</a></p> -->
 				
 			</div>
 	<!--		<div class="w-full sm:w-1/2 p-6">
@@ -231,7 +231,8 @@
 				</div>
 			</div>
 		        <div class='tableauPlaceholder' id='viz1602405225125' style='position: relative'><noscript><a href='https:&#47;&#47;www.msan.com'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;QQ4XJDF9N' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                
-		</div>
+                       <div class='tableauPlaceholder' id='viz1602595083817' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;OD&#47;ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;OD&#47;ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>               
+	      </div>
 	</div>
 </section>
 		
@@ -601,7 +602,14 @@
 	scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 	vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 </script>
-
+<!-- <script type='text/javascript'>                    
+	var divElement = document.getElementById('viz1602595083817');                   
+	var vizElement = divElement.getElementsByTagName('object')[0];                   
+	vizElement.style.width='1016px';vizElement.style.height='991px';                   
+	var scriptElement = document.createElement('script');                   
+	scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+	vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+</script> -->
 </body>
 
 </html>
