--- a/index.html
+++ b/index.html
@@ -602,14 +602,14 @@
 	scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 	vizElement.parentNode.insertBefore(scriptElement, vizElement);                
 </script>
-<!-- <script type='text/javascript'>                    
+<script type='text/javascript'>                    
 	var divElement = document.getElementById('viz1602595083817');                   
 	var vizElement = divElement.getElementsByTagName('object')[0];                   
 	vizElement.style.width='1016px';vizElement.style.height='991px';                   
 	var scriptElement = document.createElement('script');                   
 	scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 	vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-</script> -->
+</script>
 </body>
 
 </html>
