--- a/index.html
+++ b/index.html
@@ -117,31 +117,35 @@
 <section class="bg-white border-b py-8">
 	<div class="container max-w-5xl mx-auto m-8">
 		<div class="flex flex-wrap">
-			<div class="w-5/6 sm:w-1/2 p-6">
+		 <div>
 		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Data MSAN</h1>
 		 <div class="w-full mb-4">	
 		 	<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>	
 		 <div class='tableauPlaceholder' id='viz1602405225125' style='position: relative'><noscript><a href='https:&#47;&#47;www.msan.com'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;QQ4XJDF9N' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                
-		 
+		 <br>
+			 
 		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard ODP, ODC, MSAN, Gangguan, dan Demand</h1>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
-		 </div>                 
+		 </div>  
 		 <div class='tableauPlaceholder' id='viz1602595083817' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;OD&#47;ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;OD&#47;ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>              
-
+ 
+		 <br>			 
 		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard KW Pelanggan</h1>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>
         	 <div class='tableauPlaceholder' id='viz1602597810211' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;KW&#47;KWPelanggan-T2020&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='KWPelanggan-T2020&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;KW&#47;KWPelanggan-T2020&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                			
+		 <br>
 		 
 		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Prediksi ODP Gendong</h1>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>
 		 <div class='tableauPlaceholder' id='viz1602597979549' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Su&#47;SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Su&#47;SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                
-
+                 <br>
+			 
 		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Unspec Pelanggan</h1>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
