--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	<div class="container max-w-5xl mx-auto m-8">
 		<div class="flex flex-wrap">
 		 <div>
-		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Data MSAN</h1>
+		<!-- <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Data MSAN</h1>
 		 <div class="w-full mb-4">	
 		 	<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>	
@@ -150,7 +150,8 @@
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>			
-		 <div class='tableauPlaceholder' id='viz1602598125120' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;86&#47;86QN52JXY&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;86QN52JXY' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;86&#47;86QN52JXY&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                		
+		 <div class='tableauPlaceholder' id='viz1602598125120' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;86&#47;86QN52JXY&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;86QN52JXY' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;86&#47;86QN52JXY&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                	
+-->
 	     </div>
 	</div>
 </section>
