--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
 			<p class="uppercase tracking-loose w-full">What business are you?</p>
 			<h1 class="my-4 text-5xl font-bold leading-tight">Welcome to My Dashboard</h1>
-			<p class="leading-normal text-2xl mb-8">A dashboard needs to be ligth, focus on "K" in KPIs (Pearl Zhu)</p>
+			<p class="leading-normal text-2xl mb-8">"Integrated Dashboard Visualization for MSAN, ODC, ODP, ODP GENDONG( di-italic), and Unspec Issue as a Solution for Asset Mapping and Determining the Focus of Handling Unspec in Witel Jakbar"</p>
 		
 			
 
@@ -118,40 +118,39 @@
 	<div class="container max-w-5xl mx-auto m-8">
 		<div class="flex flex-wrap">
 		 <div>
-		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Data MSAN</h1>
+		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashbord Data MSAN</h3>
 		 <div class="w-full mb-4">	
 		 	<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>	
 		 <div class='tableauPlaceholder' id='viz1602405225125' style='position: relative;width: 100%; height: 100%'><noscript><a href='https:&#47;&#47;www.msan.com'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;QQ4XJDF9N' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                
 		 <br>
-		<!--	 
-		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard ODP, ODC, MSAN, Gangguan, dan Demand</h1>
+	 
+		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard ODP, ODC, MSAN, Gangguan, dan Demand</h3>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>  
-		 <div class='tableauPlaceholder' id='viz1602595083817' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;OD&#47;ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;OD&#47;ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>              
+		 <div class='tableauPlaceholder' id='viz1602595083817' style='position: relative;width: 100%; height: 100%'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;OD&#47;ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;OD&#47;ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>              
  
 		 <br>			 
-		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard KW Pelanggan</h1>
+		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard KW Pelanggan</h3>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>
-        	 <div class='tableauPlaceholder' id='viz1602597810211' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;KW&#47;KWPelanggan-T2020&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='KWPelanggan-T2020&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;KW&#47;KWPelanggan-T2020&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                			
+        	 <div class='tableauPlaceholder' id='viz1602597810211' style='position: relative;width: 100%; height: 100%'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;KW&#47;KWPelanggan-T2020&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='KWPelanggan-T2020&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;KW&#47;KWPelanggan-T2020&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                			
 		 <br>
 		 
-		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Prediksi ODP Gendong</h1>
+		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Prediksi ODP Gendong</h3>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>
-		 <div class='tableauPlaceholder' id='viz1602597979549' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Su&#47;SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Su&#47;SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                
+		 <div class='tableauPlaceholder' id='viz1602597979549' style='position: relative;width: 100%; height: 100%'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Su&#47;SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Su&#47;SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                
                  <br>
 			 
-		 <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Unspec Pelanggan</h1>
+		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Unspec Pelanggan</h3>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>			
-		 <div class='tableauPlaceholder' id='viz1602598125120' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;86&#47;86QN52JXY&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;86QN52JXY' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;86&#47;86QN52JXY&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                	
--->
+		 <div class='tableauPlaceholder' id='viz1602598125120' style='position: relative;width: 100%; height: 100%'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;86&#47;86QN52JXY&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;86QN52JXY' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;86&#47;86QN52JXY&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                	
 	     </div>
 	</div>
 </section>
@@ -176,14 +175,14 @@
 
 <section class="container mx-auto text-center py-6 mb-12">
 
-	<h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">Call to Action</h1>
+	<h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">Need a Discussion</h1>
 	<div class="w-full mb-4">	
 		<div class="h-1 mx-auto bg-white w-1/6 opacity-25 my-0 py-0 rounded-t"></div>
 	</div>
 
-	<h3 class="my-4 text-3xl leading-tight">Main Hero Message to sell yourself!</h3>	
+	<h3 class="my-4 text-3xl leading-tight">Please contact me at LinkedIn</h3>	
 
-	<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg">Action!</button>
+	<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg href="https://www.linkedin.com/in/rizqiardhi/?originalSubdomain=id"">LinkedIn</button>
 		
 </section>
 
@@ -210,13 +209,7 @@
                 <p class="uppercase text-gray-500 md:mb-6">Social</p>
                 <ul class="list-reset mb-6">
                     <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                        <a href="#" class="no-underline hover:underline text-gray-800 hover:text-orange-500">Facebook</a>
-                    </li>
-                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                        <a href="#" class="no-underline hover:underline text-gray-800 hover:text-orange-500">Linkedin</a>
-                    </li>
-                    <li class="mt-2 inline-block mr-2 md:block md:mr-0">
-                        <a href="#" class="no-underline hover:underline text-gray-800 hover:text-orange-500">Twitter</a>
+                        <a href="https://www.linkedin.com/in/rizqiardhi/?originalSubdomain=id" class="no-underline hover:underline text-gray-800 hover:text-orange-500">LinkedIn</a>
                     </li>
                 </ul>
             </div>
