--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
 		<!--Left Col-->
 		<div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
-			<p class="uppercase tracking-loose w-full">What business are you?</p>
+			<!--<p class="uppercase tracking-loose w-full">What business are you?</p> -->
 			<h1 class="my-4 text-5xl font-bold leading-tight">Welcome to My Dashboard</h1>
 			<p class="leading-normal text-2xl mb-8">"Integrated Dashboard Visualization for MSAN, ODC, ODP, ODP GENDONG( di-italic), and Unspec Issue as a Solution for Asset Mapping and Determining the Focus of Handling Unspec in Witel Jakbar"</p>
 		
@@ -182,7 +182,7 @@
 
 	<h3 class="my-4 text-3xl leading-tight">Please contact me at LinkedIn</h3>	
 
-	<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg href="https://www.linkedin.com/in/rizqiardhi/?originalSubdomain=id"">LinkedIn</button>
+	<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg" href="https://www.linkedin.com/in/rizqiardhi/?originalSubdomain=id">LinkedIn</button>
 		
 </section>
 
@@ -213,7 +213,7 @@
                     </li>
                 </ul>
             </div>
-            </div> -->
+            </div> 
         </div>
     </div>
 	
