--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 	<h3 class="my-4 text-3xl leading-tight">Please contact me at LinkedIn</h3>	
 
-	<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg" href="https://www.linkedin.com/in/rizqiardhi/?originalSubdomain=id">LinkedIn</button>
+	<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg"><a href="https://www.linkedin.com/in/rizqiardhi/?originalSubdomain=id">LinkedIn</a></button>
 		
 </section>
 
