--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 			background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
 		}
 	</style>
+    <!-- Custom styles for this template -->
+    <link href="scrolling-nav.css" rel="stylesheet">
 
 </head>
 
@@ -53,16 +55,19 @@
 		<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
 			<ul class="list-reset lg:flex justify-end flex-1 items-center">
 				<li class="mr-3">
-					<!-- <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">Active</a> -->
+					<a class="inline-block py-2 px-4 text-black font-bold no-underline nav-link js-scroll-trigger" href="#viz1602405225125">Asset</a>
 				</li>
 				<li class="mr-3">
-					<!-- <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">link</a> -->
+					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#viz1602597810211">Kwadran</a>
 				</li>
 				<li class="mr-3">
-					<!-- <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">link</a>  -->
+					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#viz1602597979549">Suspect</a> 
+				</li>
+				<li class="mr-3">
+					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#viz1602598125120">Unspec</a> 
 				</li>
 			</ul>
-			<button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75">Get Started</button>
+			<button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 nav-link js-scroll-trigger nav-link js-scroll-trigger"  href="#contact">Contact Me</button>
 		</div>
 	</div>
 	
@@ -84,7 +89,7 @@
 		
 			
 
-			<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg">Get Started</button>
+			<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg nav-link js-scroll-trigger" href="#viz1602405225125">Get Started</button>
 			
 		</div>
 		<!--Right Col-->
@@ -173,7 +178,7 @@
 	</g>
 </svg>
 
-<section class="container mx-auto text-center py-6 mb-12">
+<section class="container mx-auto text-center py-6 mb-12" id="contact">
 
 	<h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-white">Need a Discussion</h1>
 	<div class="w-full mb-4">	
@@ -348,7 +353,11 @@
 	var scriptElement = document.createElement('script');                    
 	scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 	vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-</script>	
+</script>
+
+<!-- Custom JavaScript for this theme -->
+<script src="scrolling-nav.js"></script>
+	
 </body>
 
 </html>
