--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 		<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
 			<ul class="list-reset lg:flex justify-end flex-1 items-center">
 				<li class="mr-3">
-					<a class="inline-block py-2 px-4 text-black font-bold no-underline nav-link js-scroll-trigger" href="#viz1602405225125">Asset</a>
+					<a class="inline-block py-2 px-4 text-black font-bold no-underline nav-link js-scroll-trigger" href="#asset">Asset</a>
 				</li>
 				<li class="mr-3">
-					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#viz1602597810211">Kwadran</a>
+					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#kwadran">Kwadran</a>
 				</li>
 				<li class="mr-3">
-					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#viz1602597979549">Suspect</a> 
+					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#suspect">Suspect</a> 
 				</li>
 				<li class="mr-3">
-					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#viz1602598125120">Unspec</a> 
+					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#unspec">Unspec</a> 
 				</li>
 			</ul>
-			<button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 nav-link js-scroll-trigger nav-link js-scroll-trigger"  href="#contact">Contact Me</button>
+			<button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 nav-link js-scroll-trigger nav-link js-scroll-trigger"><a href="#contact">Contact Me</a></button>
 		</div>
 	</div>
 	
@@ -89,7 +89,7 @@
 		
 			
 
-			<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg nav-link js-scroll-trigger" href="#viz1602405225125">Get Started</button>
+			<button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg nav-link js-scroll-trigger"><a href="#asset">Get Started</a></button>
 			
 		</div>
 		<!--Right Col-->
@@ -123,11 +123,11 @@
 	<div class="container max-w-5xl mx-auto m-8">
 		<div class="flex flex-wrap">
 		 <div>
-		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashbord Data MSAN</h3>
+		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800" id="asset">Dashbord Data MSAN</h3>
 		 <div class="w-full mb-4">	
 		 	<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>	
-		 <div class='tableauPlaceholder' id='viz1602405225125' style='position: relative;width: 100%; height: 100%'><noscript><a href='https:&#47;&#47;www.msan.com'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;QQ4XJDF9N' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                
+		 <div class='tableauPlaceholder' id='viz1602405225125' style='position: relative;width: 100%; height: 100%' ><noscript><a href='https:&#47;&#47;www.msan.com'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;QQ4XJDF9N' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;QQ&#47;QQ4XJDF9N&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                
 		 <br>
 	 
 		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard ODP, ODC, MSAN, Gangguan, dan Demand</h3>
@@ -137,21 +137,21 @@
 		 <div class='tableauPlaceholder' id='viz1602595083817' style='position: relative;width: 100%; height: 100%'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;OD&#47;ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;OD&#47;ODPODCMSANGANGGUANDEMAND-T2020&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>              
  
 		 <br>			 
-		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard KW Pelanggan</h3>
+		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800" id="kwadran">Dashboard KW Pelanggan</h3>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>
         	 <div class='tableauPlaceholder' id='viz1602597810211' style='position: relative;width: 100%; height: 100%'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;KW&#47;KWPelanggan-T2020&#47;Story1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='KWPelanggan-T2020&#47;Story1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;KW&#47;KWPelanggan-T2020&#47;Story1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                			
 		 <br>
 		 
-		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Prediksi ODP Gendong</h3>
+		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800" id="suspect">Dashboard Prediksi ODP Gendong</h3>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>
 		 <div class='tableauPlaceholder' id='viz1602597979549' style='position: relative;width: 100%; height: 100%'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Su&#47;SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Su&#47;SuspectGendongKeseluruhanFix&#47;PrediksiSuspectGendong&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en' /><param name='filter' value='publish=yes' /></object></div>                
                  <br>
 			 
-		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">Dashboard Unspec Pelanggan</h3>
+		 <h3 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800" id="unspec">Dashboard Unspec Pelanggan</h3>
 		 <div class="w-full mb-4">	
 			<div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
 		 </div>			
