--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
 	</style>
     <!-- Custom styles for this template -->
     <link href="scrolling-nav.css" rel="stylesheet">
+     <style>
+     html {
+      scroll-behavior: smooth;
+     }
+    </style>
 
+	
 </head>
 
 <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
@@ -55,19 +61,19 @@
 		<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden lg:block mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
 			<ul class="list-reset lg:flex justify-end flex-1 items-center">
 				<li class="mr-3">
-					<a class="inline-block py-2 px-4 text-black font-bold no-underline nav-link js-scroll-trigger" href="#asset">Asset</a>
+					<a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#asset">Asset</a>
 				</li>
 				<li class="mr-3">
-					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#kwadran">Kwadran</a>
+					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#kwadran">Kwadran</a>
 				</li>
 				<li class="mr-3">
-					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#suspect">Suspect</a> 
+					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#suspect">Suspect</a> 
 				</li>
 				<li class="mr-3">
-					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4 nav-link js-scroll-trigger" href="#unspec">Unspec</a> 
+					<a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#unspec">Unspec</a> 
 				</li>
 			</ul>
-			<button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 nav-link js-scroll-trigger nav-link js-scroll-trigger"><a href="#contact">Contact Me</a></button>
+			<button id="navAction" class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 "><a href="#contact">Contact Me</a></button>
 		</div>
 	</div>
 	
