--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
 	</style>
     <!-- Custom styles for this template -->
     <link href="scrolling-nav.css" rel="stylesheet">
-     <style>
-     html {
-      scroll-behavior: smooth;
-     }
-    </style>
+
 
 	
 </head>
@@ -363,6 +359,7 @@
 
 <!-- Custom JavaScript for this theme -->
 <script src="scrolling-nav.js"></script>
+<script src="scroll.js"></script>
 	
 </body>
 
