--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 			background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
 		}
 	</style>
-   <link href="scrolling-nav.css" rel="stylesheet">	
+   <link href="scrolling-nav.css" rel="stylesheet">
+	<style> 
+		html {
+  		scroll-behavior: smooth;
+		}
+	</style>
 </head>
 
 <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
@@ -355,6 +360,7 @@
 
 <!-- Custom JavaScript for this theme -->
 <script src="scroll.js"></script>
+<script src="jquery.min.js"></script>
 <script src="scrolling-nav.js"></script>
 	
 </body>
